2481 [MKV Muxer]            added HEVC support (requires mkvmerge 6.8.0+)
2480 [OneClick]             changed resize behaviour so that upsizing will be used if enabled
2479 [AVS Script Creator]   reverted Yadif back to Load_Stdcall_Plugin (regression of 2471)
2478 [HD Streams Extractor] last used open mode will be preselected
     [HD Streams Extractor] fixed using wrong source file in file mode if more than one job is added with "and close" disabled
2477 [Update]               fixed sometimes not possible to enable packages
     [Update]               improved default update selection logic
     [Update]               fixed sometimes not processing all packages
2476 [Queue]                removed general check for missing packages at queue start
     [Update]               automatically download needed and missing packages after confirmation if the package was disabled (regression of 2471)
2475 [Audio Encoder]        added needed ConvertAudioToFloat() for AviSynth+
2474 [AVS Script Creator]   fixed path for Yadif and BassAudioSource (regression of 2471)
2473 [Update]               fixed error if auto update is disabled (regression of 2471)
2472 [Update]               required packages are always enabled
2471 [Update]               merged some avisynth plugins into one package
     [Update]               fixed problem with the installation of the avs package
     [Update]               internal optimizations
2470 [AVS Script Creator]   fixed sometimes using VobSub instead of TextSub
2469 [FFMS Indexer]         do not index audio tracks if they will be demuxed
2468 [MKV Demuxer]          if a delay is needed e.g. "Delay 123ms" (instead of "123ms") will be added to the demuxed file name
2467 [OneClick]             "Don't encode video" is now used for all containers
     [OneClick]             improved detection of suitable output containers
2466 [Update]               automatically download needed and missing packages after confirmation if the package was disabled